Fix spacing in header container

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -187,9 +187,8 @@ ul{padding:0;margin:0;}
 .about{
     font-family:'nimbus roman no9 L','Courier new bold', Georgia, 'times', serif;
     width:100%;
-    height:100%;
     position:relative;
-    padding:25% 0;
+    padding-top:4em;
     letter-spacing:0.05em;
 
     .flexbox &{display:flex;
@@ -198,18 +197,16 @@ ul{padding:0;margin:0;}
     }
 
     p{
-        margin:0 0 0.25em 0;
         font-size:1em;
     }
 
     h2,h3{
-        margin:0 0 0.25em 0;
         font-weight:normal;
         font-size:2em;
     }
 
     .text-highlight{
-        padding:0 5% 0 2.5%;
+        padding:0.125em 5% 0.25em 2.5%;
         background-color: transparentize($black, 0.5);
     }
     @media screen and (min-width: 600px) {
@@ -218,6 +215,9 @@ ul{padding:0;margin:0;}
     @media screen and (min-width: 1200px) {
         font-size:2em;
     }
+}
+.site-description{
+    margin: 0;
 }
 
 section{
